--- a/public/register.html
+++ b/public/register.html
@@ -1,43 +1,103 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Registro</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: url('https://c4.wallpaperflare.com/wallpaper/110/1012/37/photography-landscape-mountains-sunlight-wallpaper-preview.jpg') no-repeat center center fixed;
+      background-size: cover;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      color: white;
+    }
+
+    .form-container {
+      background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro */
+      padding: 30px;
+      border-radius: 8px;
+      width: 300px;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .form-container h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .form-container input {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 15px;
+      border: none;
+      border-radius: 5px;
+      background-color: rgba(255, 255, 255, 0.3);
+      color: white;
+      font-size: 1rem;
+    }
+
+    .form-container button {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      background-color: #007bff;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: background-color 0.3s ease;
+    }
+
+    .form-container button:hover {
+      background-color: #0056b3;
+    }
+
+    .form-container .redirect {
+      text-align: center;
+      margin-top: 15px;
+    }
+
+    .form-container .redirect a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    .form-container .redirect a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1> Registrarse</h1>
-        <form id="registerForm">
-            <input type="text" id="name" placeholder="Nombre completo" required>
-            <input type="email" id="email" placeholder="Correo electrónico" required>
-            <input type="password" id="password" placeholder="Contraseña" required>
-            <button type="submit">Crear cuenta</button>
-        </form>
-        <a href="login.html">¿Ya tienes cuenta? Inicia sesión</a>
+
+  <div class="form-container">
+    <h2>Register</h2>
+    <input type="text" placeholder="Username" id="reg-username" />
+    <input type="email" placeholder="Email" id="reg-email" />
+    <input type="password" placeholder="Password" id="reg-password" />
+    <button onclick="register()">Register</button>
+    <div class="redirect">
+      <p>Already have an account? <a href="login.html">Login here</a></p>
     </div>
+  </div>
 
-    <script>
-        document.getElementById('registerForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const name = document.getElementById('name').value;
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
+  <script>
+    function register() {
+      const username = document.getElementById('reg-username').value;
+      const email = document.getElementById('reg-email').value;
+      const password = document.getElementById('reg-password').value;
+      if (username && email && password) {
+        alert("Registration Successful");
+        // Aquí puedes agregar la lógica para enviar los datos al servidor o redirigir
+      } else {
+        alert("Please fill out all fields.");
+      }
+    }
+  </script>
 
-            const res = await fetch('http://localhost:4000/api/auth/register', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ name, email, password })
-            });
-
-            const data = await res.json();
-            if (res.ok) {
-                alert('Registro exitoso');
-                window.location.href = 'login.html';
-            } else {
-                alert(data.error || 'Error al registrarse');
-            }
-        });
-    </script>
 </body>
 </html>
